--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -158,7 +158,7 @@ r.SupportLowQualityLightmaps=True
 r.SupportPointLightWholeSceneShadows=True
 r.Shadow.TranslucentPerObject.ProjectEnabled=False
 r.Water.SingleLayerWater.SupportCloudShadow=False
-r.Substrate=False
+r.Substrate=True
 r.Substrate.OpaqueMaterialRoughRefraction=False
 r.Substrate.Debug.AdvancedVisualizationShaders=False
 r.Material.RoughDiffuse=False
